# TelemetryTaco

./: .gitignore  Makefile  README.md  clear-rate-limit.sh  package.json  restart-backend.sh  seed.sh  start.sh  stop.sh
.github/: codeql-config.yml
.github/workflows/: cicd.yml
backend/: Dockerfile  pyproject.toml
backend/core/: api.py
backend/core/management/commands/: seed_events.py
backend/telemetry_taco/: settings.py
frontend/: package.json
sdk/: telemetry_taco.py
